﻿2009-11-27  Antonello Provenzano  <antonello@deveel.com>
	* DateFunctionFactory.cs: implemented the function EXTRACT
	
2009-11-01  Antonello Provenzano  <antonello@deveel.com>
	* InternalFunctionFactory.cs: functions groupped by domain 
	into separate files.
	* FunctionFactory.cs: 
		- removed property 'Internal' and replaced with 'Default' 
		(which returns a DefaultFunctionFactory	instance)
		- implemented class DefaultFunctionFactory
	
2009-10-25  Antonello Provenzano  <antonello@deveel.com>
	* IdentityFunction.cs: added to support the retrieval of
	the IDENTITY of a table.
	
2009-10-20  Antonello Provenzano  <antonello@deveel.com>
	* InternalFunctionFactory.cs: added the following function:
		Mathematical: COS, COSH, ACOS, TAN, TANH, ATAN, 
		SIN, ASIN
		String: SOUNDEX

2009-10-14  Antonello Provenzano  <antonello@deveel.com>
	* FunctionDef.cs: when evaluating with a null query context
	it will use the FunctionFactory.Internal to look for the
	function to evaluate.