@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E6D28250-DDDE-48E8-8D42-01D6B06E163E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -84,11 +84,6 @@
         </MonoDevelop.Autotools.MakefileInfo>
       </Properties>
     </MonoDevelop>
+    <VisualStudio />
   </ProjectExtensions>
-  <ItemGroup>
-    <Content Include="..\lib\NHibernate.dll" />
-    <Content Include="..\lib\Antlr3.Runtime.dll" />
-    <Content Include="..\lib\Iesi.Collections.dll" />
-    <Content Include="..\lib\log4net.dll" />
-  </ItemGroup>
 </Project>
