@@ -105,6 +105,7 @@
     <Compile Include="Deveel.Data.Mapping\UniqueAttribute.cs" />
     <Compile Include="Deveel.Data.Mapping\UserDefinedType.cs" />
     <Compile Include="Deveel.Data.Sql\AlterTableActionType.cs" />
+    <Compile Include="Deveel.Data\CaseCondition.cs" />
     <Compile Include="Deveel.Data.Sql\CloseCursorStatement.cs" />
     <Compile Include="Deveel.Data.Sql\ColumnConstraints.cs" />
     <Compile Include="Deveel.Data.Sql\CommitStatement.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Deveel.Data.Text\DeveelRegexLibrary.cs" />
     <Compile Include="Deveel.Data.Util\Properties.cs" />
     <Compile Include="Deveel.Data.Util\ShellUserTerminal.cs" />
+    <Compile Include="Deveel.Data\CaseExpression.cs" />
     <Compile Include="Deveel.Data\ConstraintAction.cs" />
     <Compile Include="Deveel.Data\ConstraintDeferrability.cs" />
     <Compile Include="Deveel.Data\Cursor.cs" />
